fix bad white space

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
   background-color: #f6f4ef;
@@ -24,4 +28,10 @@
 .sidebar {
   width: 20%;
   height: 100vh;
+}
+
+@layer components {
+  .boobs {
+    margin-top: -95vh;
+  }
 }
